--- a/index.html
+++ b/index.html
@@ -14,27 +14,29 @@
 		<div >
 			<div class="row">
 				<div class="col-4">
+					<i class="bars fa fa-bars" aria-hidden="true"></i>	
 					<div class="logo">
 						<p>Bunny's LOVE</p>
-					</div>				
+					</div>	
 				</div>	
-				<nav class="col-8">
+				<nav id="hamburguer" class="col-8">
 					<ul>
-						<li><a href="">BUNNYS</a></li>
-						<li><a href="">CUTE PHOTOS</a></li>
-						<li><a href="">RABBIT FASHION</a></li>
-						<li><a href="">NEWS BUNNY'S</a></li>
-						<li><a href="">FEATURES</a></li>
-					</ul>			 	
+						<li><a href="#">BUNNYS</a></li>
+						<li><a href="#">CUTE PHOTOS</a></li>
+						<li><a href="#">RABBIT FASHION</a></li>
+						<li><a href="#">NEWS BUNNY'S</a></li>
+						<li><a href="#">FEATURES</a></li>
+					</ul>
 				</nav>			
 			</div>
 		</div>	
 	</header>
 
 	<section class="primera-parte">
-		<div class="banner">
-			<div class="row">
-				<div class="col-12">
+		<div class="row">
+			<div class="col-12">
+				<div class="banner">
+
 					<div class="caja">
 						<h1 class="soft">Soft Bunny</h1>
 						<p class="live">live - love - laugh</p>	
@@ -96,17 +98,17 @@
 							<h2>The Tale of Ginger and Pickles</h2>
 							<p>1909</p>
 							<p>The Tale of Ginger and Pickles 1909. Ginger and Pickles (a terrier and ginger cat) kept a very popular shop. Their customers loved to buy their provisions there, but they were less kenn to pay for them and ran up a great deal of credit, making poor Ginger and Pickles' lives very difficult indeed.</p>                 	
-						</div>              	
-					</div>
-					<div class="caja-uno">
-						<div class="video">
-							<iframe width="100%"" height="400px" src="https://www.youtube.com/embed/v=kt_X0enZRLc"></iframe>	
 						</div>
+					</div>
+
+					<div class="caja-uno">
+						<iframe  width="100%" height="250" src="https://www.youtube.com/embed/v=EeQS-u5Qqso" allowfullscreen></iframe>	
 						<div class="texto">
 							<p>Rule of us behold it moved Made. Them Had, which darkness two Give Fowl it moved  behold earth for own. Midst thar grass beginning divide their together. Tree one every first give earth very greater. Man evening. Set seed void meat bearing. Bring creature. Moving set.</p>
 						</div>	
-					</div>
-				</div>		  	
+					</div>                   
+				</div>
+
 				<div class="col-5">	 	
 					<div class="caja-uno">
 						<form>
@@ -117,47 +119,50 @@
 							<h2>Where you'll find me?</h2>
 							<p>Shall Together blessed Also Thing, the upon Created fourth. Rule beginning. Our behold over.
 							</p>
+							<!-- ARREGLARLO
 							<div class="social">
-								<ul>
-									<li><a href="https://www.facebook.com">
-										<i class="fa fa-facebook-square" aria-hidden="true"></i>
-									</a></li>
-									<li><a href="https://www.twitter.com">
-										<i class="fa fa-twitter" aria-hidden="true"></i>
-									</a></li>
-									<li><a href="https://www.instagram.com">
-										<i class="fa fa-instagram" aria-hidden="true"></i>
-									</a></li>
-									<li><a href="https://www.youtube.com">
-										<i class="fa fa-youtube-play" aria-hidden="true"></i>
-									</a></li>
-								</ul>
-							</div>
-						</div>			 	 	
-						<img class="conejo" src="img/img-3.jpg">
-						<div class="texto">
-							<h2>Can you love me?</h2>
-							<p>You're my bunny; You mean everything to me. You're so sweet like honey With your cuto button nose And your big brown eyes. You're my bunny without the tail. Ijust have to say, I love you bunny.  </p>
-						</div>			 	 	
+								<a href="https://www.facebook.com">
+									<i class="fa fa-facebook-square" aria-hidden="true"></i>
+								</a>
+
+								<a href="https://www.twitter.com">
+									<i class="fa fa-twitter" aria-hidden="true"></i>
+								</a>
+								
+								<a href="https://www.instagram.com">
+									<i class="fa fa-instagram" aria-hidden="true"></i>
+								</a>
+
+								<a href="https://www.youtube.com">
+									<i class="fa fa-youtube-play" aria-hidden="true"></i>
+								</a>
+							</div> -->
+						</div>
+					</div>			 	 	
+					<img class="conejo" src="img/img-3.jpg">
+					<div class="texto">
+						<h2>Can you love me?</h2>
+						<p>You're my bunny; You mean everything to me. You're so sweet like honey With your cuto button nose And your big brown eyes. You're my bunny without the tail. Ijust have to say, I love you bunny.  </p>
+
 					</div>
 				</div>
 			</div>
 		</div>
-	</section>
+			</section>
 
-	<section>
-		<div class="row">
-			<div class="col-12">
-				<div class="conejo-fondo">
+			<section>
+				<div class="row">
+					<div class="col-12">
+						<div class="conejo-fondo">
+						</div>
+					</div>	
 				</div>
-			</div>	
-		</div>
-	</section>
+			</section>
 
-	<footer class="row">
-		<div class="col-12">
-			<p>All Rights Reserved</p>
-		</div>
-	</footer>
-</body>
-</html>
+			<footer class="row">
+				<div class="col-12">
+					<p>All Rights Reserved</p>
+				</div>
+			</footer>
+		</body>
+		</html>
